--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
 }
 
 * {
+    scroll-behavior: smooth;
     font-family: 'Satoshi', sans-serif;
 }
 
@@ -20,5 +21,5 @@
 
 .open {
     grid-template-rows: 1fr;
-    height: calc(100vh - 80px);
+    height: 100vh;
 }
